stop stretching images

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,20 +16,6 @@ body {
   max-width: 85%;
 }
 
-.image-viewer {
-  margin: auto;
-  width: auto;
-  /* height: auto; */
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.image-container img {
-  /* max-height: 600px; */
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .image-viewer .caption {
   text-align: left;
   font-size: small;
